# CG

./: .gitignore
Notes/solid_angle/: solid_angle.tex
RayTracingInOneWeekend/: CMakeLists.txt  camera.h  color.h  hittable.h  hittable_list.h  image.ppm  main.cpp  material.h  ray.h  rtweekend.h  vec.h
RayTracingInOneWeekend/output_image/: image10.ppm  image11.ppm  image11_distant_view.ppm  image13_final_low_res.ppm  (+11 more)
RayTracingTheNextWeek/: CMakeLists.txt  aabb.h  box.h  bvh.h  camera.h  constant_medium.h  gmon.out  hittable.h  hittable_list.h  image.h  main.cpp  material.h  perlin.h  profile.txt  ray.h  rtweekend.h  texture.h  vec.h
opengl/modeling/: CMakeLists.txt
opengl/modeling/.cache/clangd/index/: camera.h.33F5EF12C93FC8CE.idx  glad.cpp.43C8D34B028E1F76.idx  light.h.95D73FD99D7E4DFE.idx  main.cpp.855BCDDE5F9FFD3E.idx  mesh.cpp.184C7C506CBD417E.idx  mesh.h.72993AA734B97C23.idx  model.cpp.18876BC8511F8AB4.idx  model.h.46C4B9444239611A.idx  shader.h.F47DDCDF075DE3EC.idx  stb_image.h.CE049CDFC8BBAEC4.idx
opengl/modeling/include/: shader.h
opengl/modeling/shader/: outline.fs
rasterizer/: camera.h  main.cpp  math.cpp  math.h  rasterizer.cpp  rasterizer.h  transformation.h
rasterizer_v0/: CMakeLists.txt  camera.cpp  geometry.cpp  geometry.h  rasterizer.cpp  rasterizer.h  transformation.cpp
rasterizer_v1/: CMakeLists.txt
rasterizer_v1/.cache/clangd/index/: buffer.cpp.1A7A9C30FFC9539F.idx  buffer.h.72CF0759B79D55CD.idx  main.cpp.522D0FCD38B27BC5.idx  vec.h.5A36E314ED7AE3CB.idx  window.cpp.9740964FE8304729.idx  window.h.AB1AFD688795685C.idx
rasterizer_v1/src/: main.cpp
rasterizer_v1/src/camera/: camera.cpp  camera.h
rasterizer_v1/src/geometry/: geometry.cpp  geometry.h  testGeometry.cpp  testGeometry.h
rasterizer_v1/src/math/: mathutils.cpp  mathutils.h  matrix.cpp  matrix.h  transformation.cpp  transformation.h  vec.cpp  vec.h
rasterizer_v1/src/rasterizer/: rasterizer.cpp  rasterizer.h  shader.cpp  shader.h
rasterizer_v1/src/screen/: buffer.h  image.cpp  image.h  window.cpp  window.h
test/: CMakeLists.txt  test.cpp
win32/: CMakeLists.txt  test.cpp  window.cpp  window.h
(+119 files in other folders)
